# gpt

./: .gitignore  bpe.py  main.py  pyproject.toml  tokenizator.py  train_bpe.py
core/: attention.py  feed_forward.py  gpt.py  transformer_block.py  utils.py
core/loaders/: __init__.py
loaders/: __init__.py  base.py
tests/: test_loaders.py
