[project]
name = "mygppt"
version = "0.1.0"
description = ""
authors = [
    {name = "kiruha01",email = "liss-2001g@mail.ru"}
]
readme = "README.md"
requires-python = ">=3.9,<4.0"
dependencies = [
    "torch (>=2.7.1,<3.0.0)",
    "tokenizers (>=0.21.2,<0.22.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "vk-api (>=11.10.0,<12.0.0)",
    "orjson (>=3.11.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"

